swagger conductor関連
