# ita_root/ita_api_organization/openapi.yaml
@@ -1530,7 +1530,58 @@ paths:
               schema:
                 $ref: '#/components/schemas/ERROR_TEMPLATE'
 
-
+  /api/{organization_id}/workspaces/{workspace_id}/ita/conductor/class/info:
+    get:
+      tags:
+        - Conductor Controll
+      description: ConductorClassの基本情報取得
+      operationId: getConductorClassInfo
+      parameters:
+        - name: organization_id
+          in: path
+          description: OrganizationID
+          required: true
+          schema:
+            type: string
+        - name: workspace_id
+          in: path
+          description: WorkspaceID
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: string
+                    example: 000-00000
+                  data:
+                    type: object
+                    properties:
+                      list:
+                        $ref: '#/components/schemas/CONDUCTOR_INFO_LIST'
+                      dict:
+                        $ref: '#/components/schemas/CONDUCTOR_INFO_DICT'
+                  message:
+                    type: string
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ERROR_TEMPLATE'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ERROR_TEMPLATE'
+                
   /api/{organization_id}/workspaces/{workspace_id}/ita/conductor/class/{conductor_class_id}:
     get:
       tags:
@@ -1553,106 +1604,6 @@ paths:
         - name: conductor_class_id
           in: path
           description: Conductor Class ID
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  result:
-                    type: string
-                    example: 000-00000
-                  data:
-                    type: boolean
-                  message:
-                    type: string
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ERROR_TEMPLATE'
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ERROR_TEMPLATE'
-
-  /api/{organization_id}/workspaces/{workspace_id}/ita/conductor/class/list/:
-    get:
-      tags:
-        - Conductor Controll
-      description: 対象の一覧を取得(Operation,Movment,Conductor)
-      operationId: getConductorUseLists
-      parameters:
-        - name: organization_id
-          in: path
-          description: OrganizationID
-          required: true
-          schema:
-            type: string
-        - name: workspace_id
-          in: path
-          description: WorkspaceID
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  result:
-                    type: string
-                    example: 000-00000
-                  data:
-                    type: boolean
-                  message:
-                    type: string
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ERROR_TEMPLATE'
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ERROR_TEMPLATE'
-  
-  /api/{organization_id}/workspaces/{workspace_id}/ita/conductor/class/list/{list_name}:
-    get:
-      tags:
-        - Conductor Controll
-      description: 指定した対象の一覧を取得(Operation,Movment,Conductor)
-      operationId: getConductorUseList
-      parameters:
-        - name: organization_id
-          in: path
-          description: OrganizationID
-          required: true
-          schema:
-            type: string
-        - name: workspace_id
-          in: path
-          description: WorkspaceID
-          required: true
-          schema:
-            type: string
-        - name: list_name
-          in: path
-          description: TargetListName
           required: true
           schema:
             type: string
@@ -1741,7 +1692,7 @@ paths:
     patch:
       tags:
         - Conductor Controll
-      description: Conductorの新規登録
+      description: Conductorの更新
       operationId: patchConductorData
       parameters:
         - name: organization_id
@@ -1766,7 +1717,7 @@ paths:
         content:
           application/json:
             schema:
-              description: 登録するConductorの構成情報
+              description: 更新するConductorの構成情報
               type: object
       responses:
         '200':
@@ -1819,8 +1770,18 @@ paths:
         content:
           application/json:
             schema:
-              description: 登録するConductorの構成情報
+              description: 作業実行するConductorの構成情報
               type: object
+              properties:
+                conductor_class_id: 
+                  type: string
+                operation_id: 
+                  type: string
+                schedule_date: 
+                  type: string
+                  example: "YYYY/MM/DD hh:mm"
+                conductor_data:
+                  type: object
       responses:
         '200':
           description: Success
@@ -1834,6 +1795,65 @@ paths:
                     example: 000-00000
                   data:
                     type: boolean
+                  message:
+                    type: string
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ERROR_TEMPLATE'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ERROR_TEMPLATE'
+
+
+  /api/{organization_id}/workspaces/{workspace_id}/ita/conductor/info/{conductor_instance_id}:
+    get:
+      tags:
+        - Conductor Controll
+      description: Conductorの基本情報取得
+      operationId: getConductorInfo
+      parameters:
+        - name: organization_id
+          in: path
+          description: OrganizationID
+          required: true
+          schema:
+            type: string
+        - name: workspace_id
+          in: path
+          description: WorkspaceID
+          required: true
+          schema:
+            type: string
+        - name: conductor_instance_id
+          in: path
+          description: Conductor Instance ID
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: string
+                    example: 000-00000
+                  data:
+                    type: object
+                    properties:
+                      list:
+                        $ref: '#/components/schemas/CONDUCTOR_INFO_LIST'
+                      dict:
+                        $ref: '#/components/schemas/CONDUCTOR_INFO_DICT'
                   message:
                     type: string
         '401':
@@ -2320,3 +2340,101 @@ components:
         type:
           type: string
           example: Register/Update
+  
+    CONDUCTOR_INFO_LIST:
+      type: object
+      properties:
+        conductor_status:
+          type: array
+          items: {}
+          example:
+            [
+              {
+                id: "string",
+                name: "string"
+              }
+            ]
+        node_status:
+          type: array
+          items: {}
+          example:
+            [
+              {
+                id: "string",
+                name: "string"
+              }
+            ]
+        node_type:
+          type: array
+          items: {}
+          example:
+            [
+              {
+                id: "string",
+                name: "string"
+              }
+            ]
+        movement:
+          type: array
+          items: {}
+          example:
+            [
+              {
+                id: "string",
+                name: "string"
+              }
+            ]
+        operation:
+          type: array
+          items: {}
+          example:
+            [
+              {
+                id: "string",
+                name: "string"
+              }
+            ]
+        conductors:
+          type: array
+          items: {}
+          example:
+            [
+              {
+                id: "string",
+                name: "string"
+              }
+            ]
+    
+    CONDUCTOR_INFO_DICT:
+      type: object
+      properties:
+        conductor_status:
+          items: {}
+          example: 
+            "status_id1" : "status_name1"
+            "status_id2" : "status_name2"
+        node_status:
+          items: {}
+          example: 
+            "status_id1" : "status_name1"
+            "status_id2" : "status_name2"
+        node_type:
+          items: {}
+          example: 
+            "node_type_id1" : "node_type_name1"
+            "node_type_id2" : "node_type_name2"
+        movement:
+          items: {}
+          example: 
+            "movement_id1" : "movement_name1"
+            "movement_id2" : "movement_name2"
+        operation:
+          items: {}
+          example: 
+            "operation_id1" : "operation_name1"
+            "operation_id2" : "operation_name2"
+        conductor:
+          items: {}
+          example: 
+            "conductor_id1" : "conductor_name1"
+            "conductor_id2" : "conductor_name2"
